Fix base64 decoding for CA

--- a/terraform/templates/fleet-agent-values.yaml.tmpl
+++ b/terraform/templates/fleet-agent-values.yaml.tmpl
@@ -1,4 +1,5 @@
-apiServerCA: ${cluster_ca_certificate}
+apiServerCA: |
+  ${cluster_ca_certificate}
 apiServerURL: https://${endpoint}
 clusterNamespace: uid2
 systemRegistrationNamespace: fleet-clusters-system
