--- a/terraform/modules/eks/templates/kubeconfig.yaml.tmpl
+++ b/terraform/modules/eks/templates/kubeconfig.yaml.tmpl
@@ -2,7 +2,7 @@ apiVersion: v1
 clusters:
 - cluster:
     certificate-authority-data: ${cluster_ca_certificate}
-    server: https://${endpoint}
+    server: ${endpoint}
   name: ${name}
 users:
 - name: terraform
